Add 0309 cookbook recipe