@@ -56,7 +56,8 @@
     <maven.shade.version>3.6.0</maven.shade.version>
 
     <!-- Test related versions -->
-    <magicfree.json.version>0.11.0</magicfree.json.version>
+    <magicfree.json.version>0.10.2</magicfree.json.version>
+    <system.lambda.version>1.2.1</system.lambda.version>
     <opencsv.version>4.6</opencsv.version>
     <lorem.version>2.1</lorem.version>
 
@@ -141,6 +142,12 @@
       <groupId>com.opencsv</groupId>
       <artifactId>opencsv</artifactId>
       <version>${opencsv.version}</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>com.github.stefanbirkner</groupId>
+      <artifactId>system-lambda</artifactId>
+      <version>${system.lambda.version}</version>
       <scope>test</scope>
     </dependency>
   </dependencies>
@@ -238,7 +245,8 @@
       <plugin>
         <artifactId>maven-surefire-plugin</artifactId>
         <configuration>
-          <argLine>${jacoco.agent.arg}</argLine>
+          <!-- Uses 'add-opens' argument for system-lambda functionality in unit tests -->
+          <argLine>${jacoco.agent.arg} --add-opens java.base/java.util=ALL-UNNAMED</argLine>
         </configuration>
       </plugin>
 
@@ -316,7 +324,7 @@
   <parent>
     <artifactId>freelib-parent</artifactId>
     <groupId>info.freelibrary</groupId>
-    <version>11.0.0</version>
+    <version>12.0.4</version>
   </parent>
 
 </project>
